<?xml version="1.0"?>
<package>
  <name>hcr_description</name>
  <version>1.0.0</version>
  <description>The hcr_description package</description>

  <license>Apache License 2.0</license>
  
  <author email="xyxybot@gmail.com">Zhongxian</author>
  <maintainer email="xyxybot@gmail.com">Zhongxian</maintainer>

  <url type="repository">https://github.com/chenzhongxian/hcr_ros</url> 
  <url type="website">https://medium.com/@xyxy</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
