<?xml version="1.0"?>
<package>
  <name>hcr_teleop</name>
  <version>0.0.0</version>
  <description>The hcr_teleop package</description>

  <license>Apache License 2.0</license>
  
  <author email="xyxybot@gmail.com">Zhongxian</author>
  <maintainer email="xyxybot@gmail.com">Zhongxian</maintainer>

  <url type="repository">https://github.com/chenzhongxian/hcr_ros</url> 
  <url type="website">https://medium.com/@xyxy</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
